<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TitleEnd"
        android:text="@string/title_end"
        android:translationY="-140dp"
        android:textSize="52sp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FinalScore"
        android:text="@string/your_score"
        android:translationY="-100dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ScoreNumber"
        android:textSize="42sp"
        android:text=""
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="160dp"
        android:id="@+id/Restart"
        android:text="Try Again"

      />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailButton"
        android:text="@string/email_button"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:translationY="60dp"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInput"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:translationY="-60dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="100dp"
        android:text="@string/send_FB"
        android:textSize="20sp"
        android:id="@+id/sendBTN"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="100dp"
        android:text="@string/get_FB"
        android:textSize="20sp"
        android:id="@+id/retrieveBTN"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_ret"
        android:translationY="120dp"
        android:textSize="18sp"
        android:id="@+id/msgFromFBTV"
        />

</LinearLayout>